--- a/Módulo 6_Semântica e CSS Avançado/estilo9.css
+++ b/Módulo 6_Semântica e CSS Avançado/estilo9.css
@@ -10,5 +10,5 @@ body {
     /*background: linear-gradient(90deg ou -90deg,white,blue); */
     background:-moz-linear-gradient(white,blue); /*FIREFOX ANTIGO*/
     background:-o-linear-gradient(white,blue); /*OPERA ANTIGO*/
-    background:-webkit-linear-gradient()/*SAFARI ANTIGO*/
+    background:-webkit-linear-gradient(white, blue)/*SAFARI ANTIGO*/
 }
