--- a/Módulo 13_Starbucks/assets/css/style.css
+++ b/Módulo 13_Starbucks/assets/css/style.css
@@ -4,17 +4,48 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
 }
+.container {
+  max-width: 1140px;
+  margin: auto;
+}
+.bar {
+  background-color: #006341;
+  width: 168px;
+  height: 22px;
+}
+h1 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
+  font-size: 90px; 
+  line-height: 100px;
+  margin: 0;
+  margin-bottom: 30px;
+}
+h2 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
+  font-size: 35px; 
+  line-height: 45px;
+  margin: 20px 0;
+}
+.button {
+  display: inline-block;
+  border: 2px solid #454545;
+  padding: 10px 30px;
+  border-radius: 3px;
+  color: #454545;
+  text-decoration: none;
+}
+.button:hover {
+  color: #fff;
+  background-color: #454545;
+}
+
 
 header .line {
   background-color: #117050;
   height: 10px;
 }
-
-.container {
-  max-width: 1140px;
-  margin: auto;
-}
-
 .header--area {
   display: flex;
   justify-content: space-between;
@@ -58,8 +89,53 @@ header .line {
   margin-left: 50px;
   cursor: pointer;
 }
-
 .header--menu img {
   width: 24px;
   height: 24px;
+}
+
+.banner {
+  background-image: url(../images/bg.jpg);
+  background-position: center;
+  background-size: cover;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+.banner--images {
+  margin-top: 60px;
+}
+.banner--images img {
+  width: 148px;
+  height: 148px;
+  border: 6px solid #117050;
+  border-radius: 50%;
+  margin-right: 40px;
+}
+
+.area1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.area1--content {
+  padding: 80px;
+}
+.area1--quote {
+  margin-bottom: 30px;
+}
+.area1--text {
+  margin-bottom: 50px;
+  line-height: 25px;
+}
+.area1--img1 {
+  height: 350px;
+  background-image: url(../images/f2.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.area1--img2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  background-image: url(../images/f1.jpg);
+  background-size: cover;
+  background-position: center;
 }
