--- a/Módulo 13_Starbucks/assets/css/style.css
+++ b/Módulo 13_Starbucks/assets/css/style.css
@@ -95,7 +95,7 @@ header .line {
 }
 
 .banner {
-  background-image: url(../images/bg.jpg);
+  background-image: url('../images/bg.jpg');
   background-position: center;
   background-size: cover;
   padding-top: 90px;
@@ -128,14 +128,59 @@ header .line {
 }
 .area1--img1 {
   height: 350px;
-  background-image: url(../images/f2.jpg);
+  background-image: url('../images/f2.jpg');
   background-size: cover;
   background-position: center;
 }
 .area1--img2 {
   grid-column: 2 / 3;
   grid-row: 1 / 3;
-  background-image: url(../images/f1.jpg);
+  background-image: url('../images/f1.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.area2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.area2--content {
+  padding: 80px;
+}
+.area2--text {
+  margin-bottom: 50px;
+  line-height: 25px;
+}
+.area2--img1 {
+  height: 450px;
+  background-image: url('../images/f4.jpg');
+  background-size: cover;
+  background-position: center;
+}
+.area2--img2 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  background-image: url('../images/f3.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.area3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.area3--content {
+  padding: 200px 80px;
+  background-image: url('../images/bg2.jpg');
+  background-size: cover;
+  background-position: left;
+}
+.area3--text {
+  margin-bottom: 50px;
+  line-height: 25px;
+}
+.area3--img1 {
+  background-image: url('../images/f5.jpg');
   background-size: cover;
   background-position: center;
 }
