--- a/Módulo 15_B7Burger/assets/style.css
+++ b/Módulo 15_B7Burger/assets/style.css
@@ -150,6 +150,147 @@ header .menu-icon div {
   opacity: 0.8;
 }
 
+/* SEARCH */
+.search {
+  background-color: #1f1f1f;
+  padding: 80px 0;
+  margin-top: -100px;
+}
+
+.search .title {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.search .sides {
+  display: flex;
+  margin-top: 30px;
+  gap: 100px;
+}
+
+.search input,
+.search select {
+  width: 100%;
+  background-color: #2b2b2b;
+  color: #fff;
+  font-size: 24px;
+  outline: none;
+  padding: 20px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.search input {
+  background-image: url(./searchIcon.png);
+  background-repeat: no-repeat;
+  background-position: 20px center;
+  padding-left: 60px;
+}
+
+.search select {
+  border-right: 20px solid transparent;
+}
+
+.search .leftside,
+.search .rightside {
+  flex: 1;
+}
+
+/* PRODUCTS */
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.product-item {
+  display: block;
+  border-radius: 8px;
+  overflow: hidden;
+  text-decoration: none;
+  position: relative; /* div warning*/
+}
+
+.product-item:hover {
+  opacity: 0.8;
+}
+
+.product-item .warning {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-color: #fe6a0f;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 4px;
+}
+
+.product-item .photo {
+  text-align: center;
+  background-color: #2b2b2b;
+  padding-top: 30px;
+}
+
+.product-item .photo img {
+  max-width: 100%;
+}
+
+.product-item .info {
+  background-color: #1f1f1f;
+  padding: 60px 30px 30px 30px;
+  margin-top: -50px;
+}
+
+.product-item .product-category {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.product-item .product-name {
+  font-family: 'Calistoga';
+  font-size: 32px;
+  color: #fff;
+  margin: 10px 0;
+}
+
+.product-item .product-price {
+  font-size: 32px;
+  font-weight: bold;
+  color: #fe6a0f;
+}
+
+/* FOOTER */
+footer {
+  background-color: #1f1f1f;
+}
+
+footer .container {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .copyrights {
+  font-size: 24px;
+  color: #5f5f5f;
+}
+
+footer .copyrights a {
+  color: #5f5f5f;
+  text-decoration: none;
+}
+
+
+footer .copyrights a:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 820px) {
   header nav {
     display: none;
@@ -173,5 +314,31 @@ header .menu-icon div {
   .hero h1 {
     font-size: 44px;
     line-height: 50px;
+  }
+
+  .search {
+    padding-bottom: 30px;
+  }
+  .search .title {
+    text-align: center;
+  }
+  .search .sides {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .products-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  footer .container {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .products-grid {
+    grid-template-columns: 1fr;
   }
 }
